[package]
name = "cubiomes-test-generation-parse-args"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cubiomes_test_generation_parse_args"
crate-type = ["cdylib"]

[dependencies]
structopt = "0.3.25"

[build-dependencies]
cbindgen = "0.19.0"
